# multiplatform_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/me/sfalexrog/multiplatform/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/me/sfalexrog/multiplatform/: MainActivity.java
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/test/java/me/sfalexrog/multiplatform/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
docker/: Dockerfile  Dockerfile_native  build.sh  emcompile.sh  native_compile.sh  native_docker.sh
docs/: platform-quirks.md
src/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
